# mykube

./: .gitignore  404.html  CLAUDE.md  README.md  SECURITY.md  index.html  mkdocs.yml  sitemap.xml
.claude/commands/: release.md
.github/workflows/: docs.yml  release.yml
cli/: go.mod  go.sum  main.go
cli-reference/: index.html
cli/cmd/: client.go  root.go  server.go
cli/internal/e2e/: e2e.go
cli/internal/handshake/: protocol.go
cli/internal/kubeconfig/: loader.go  writer.go
cli/internal/relay/: client.go
cli/internal/tunnel/: bridge.go
contributing/: index.html
docs/: cli-reference.md  contributing.md  getting-started.md  how-it-works.md  index.md  proxy.md  security.md
docs/relay/: overview.md  self-hosting.md
getting-started/: index.html
how-it-works/: index.html
proxy/: Dockerfile  docker-compose.yml  index.html  squid.conf  squidca.crt
proxy/certs/: server.crt
relay/: pyproject.toml
relay/overview/: index.html
relay/self-hosting/: index.html
relay/src/mykube_relay/: __main__.py  app.py  config.py  errors.py  models.py  rate_limit.py  session_store.py
relay/src/mykube_relay/routes/: api.py  ws.py
relay/tests/: conftest.py  test_api.py  test_session_store.py  test_ws.py
search/: search_index.json
security/: index.html
