[project]
name = "mykube-relay"
version = "0.1.0"
description = "WebSocket relay server for mykube"
readme = "README.md"
authors = [
    { name = "Damien Hauser", email = "dhauser@icrc.org" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
